<resources>
    <string name="app_name">Calculator</string>
    <string name="seven">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divider">/</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="subraction">-</string>
    <string name="three">3</string>
    <string name="display">0</string>
    <string name="squar">x²</string>
    <string name="root">AK</string>
    <string name="cancel">C</string>
    <string name="roung_button">X</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">*</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="title">Calculator</string>
</resources>